[tool.poetry]
name = "sbac"
version = "0.1.0"
description = "Data analysis project for a Coursera Strategic Business Analytics course"
authors = ["Maria Kesa & Rasmus Rogue"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
geopandas = "^0.12.2"
geojson = "^3.0.1"
numpy = "^1.24.2"
scipy = "^1.10.1"
h3 = "^3.7.6"
xarray = "^2023.2.0"
pysal = "^23.1"
contextily = "^1.3.0"
rioxarray = "^0.13.4"
dagshub = "^0.2.12"
prefect = "2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
